bootstrap/system/traefik/resources/chains.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app: traefik
  name: chain-basic-auth
spec:
  chain:
    middlewares:
    - name: basicauth
    - name: headers

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app: traefik
  name: chain-traefik-dashboard
spec:
  chain:
    middlewares:
    - name: traefik-dashboard-auth
    - name: headers

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app: traefik
  name: longhorn-dashboard
spec:
  chain:
    middlewares:
    - name: traefik-dashboard-auth
    - name: svc-longhorn-headers
