bootstrap/system/traefik/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: traefik-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Sow7h6WfuJpk03Cv9nDDfoAYOO1szFaQUsgOFGQXd1ah,iv:v33NX3CfEMLplYcTIRkPlagGzGu/HqM5QDsDMRFOiLw=,tag:6CBI4tMN4vH+e8YCaQaseA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:2FBu1mq6hTIv58XRT+5eh40uxYlor+LoTRndF8YJozy/,iv:IHNs/ybvWnIJ5R2A52YFKb63DFEI6+ftpheXxmr8TRs=,tag:F7GIf33JNQMUiQ+A5YEycg==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBONjVqUjMrN0d4YURWQXp4
[...]
            ZKinMxbxhlV/SshaVfE32W7vpChHghoyiAXTvUs+z8z08PXMUkExsA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:38:45Z"
    mac: ENC[AES256_GCM,data:oa2vmFwtaH0aGzNfP14hxB0VE04yw9pn11iH/5/FSfk3aVhjxwTa92Azfhob6qqYaWbhblUeuDkXEYgtGBOlNeAmqiDQWwFsUDDSVyvvw6Kifr/sBf2yTZ6UAKf8r+hlTF8Mwn2s1mZAi05h9dxAZupVNfmr+OPD1zGHTVVLueY=,iv:u9ZCCliIcTET6Nr6XdhPS6wknuYuLui7C07yFwrM+HY=,tag:gXc+aPChEYfZMTE/1kMu0Q==,type:str]
    pgp:
        - created_at: "2024-06-20T13:38:45Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//YuAjU66icK2Lgd3V8F0Nh0AISOtMXD3AnB/pV4Ax4o7n
[...]
            =gd84
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
