bootstrap/system/traefik/resources/external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.system.anotherlife.org.pl
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: traefik.system.anotherlife.org.pl
  sessionAffinity: None
