bootstrap/system/traefik/resources/ingressroute.sops.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:IMBzsSbTeEzj//+qwHcDQFHB8KH7azZ9aA==,iv:CBPzDjynFA0wP3t9SIxBLp6RUMIsu+jbxmoTrtbSfH0=,tag:kIPKRMDvcTy7DyrqhVkr6A==,type:str]
        kubernetes.io/ingress.class: traefik-external
        gethomepage.dev/description: traefik
        gethomepage.dev/enabled: "true"
        gethomepage.dev/group: Tools
        gethomepage.dev/icon: homepage.png
        gethomepage.dev/name: traefik
        gethomepage.dev/widget.type: traefik
        gethomepage.dev/widget.url: https://traefik.system.anotherlife.org.pl
    labels:
        app: traefik
    name: dashboard
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:MOEp5P6zPe8IgMkj1H30r8WmO4R21TQe1i7IY+gu/ppjHFIgs3wuTMGoCkuseS93kII7fjKDCdCaHccwMU9+gvcSDj71I1jX85SUvUZkrIMfoE62Q49ELsS+4O7l,iv:YV1QjkFlkv5Z6KO7cwlfMYd5tin5W3PegHy12uHs/sw=,tag:udPjXxbgHE/nWITLz3s4gw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        domains:
            - main: ENC[AES256_GCM,data:gGLRgaDTrcOBubwyRIhvOctYPm3LGdQ2rg==,iv:Qgo4Fdolus7QfLSjkZkkbLmGWpiryelm/MmIHfzEibM=,tag:/ID/r5ZsPrJDY3d/NfF4/g==,type:str]
              sans:
                - ENC[AES256_GCM,data:OzWVug8dulyj7lHiI7Ticos1EHcaSSHb+24=,iv:fPNHFTSj6K7+EWBdQt6g7eZLE4Ns4FHO35srVoT3L7E=,tag:t9K7LYt5PNIqhnqnZIQz/Q==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: traefik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-06-25T21:16:26Z"
    mac: ENC[AES256_GCM,data:Do+EPSz29FPLoeg+SvXO5DKsVZqDCljNmu400lwp8neXoajm/FZbVvHM+nEokj+Bh9eccjYB5bgRW3PcbTOEhf3oDUTiGIoclqAr4F02i7h7gX96rV92qY2Xli6Qn3wu2JPeZZzdOrQZumcXEoX2HIwI/e6+J8Dd9LW3niyKnMM=,iv:djKwBzSfO5ZYBP5gHYWV2VMKvCi0w0O/GGGxNbKvoIk=,tag:bV7CxEjq5S+kNCxNTblLOg==,type:str]
    pgp:
        - created_at: "2024-06-25T21:16:26Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//Y5XZpzPMsI+ya65OsKSMA8yKrLmxSO8LKumLZ6pxlUqy
[...]
            =wGKa
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
