bootstrap/system/traefik/resources/ingressroute.staging.sops.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:NneqV2bvG7vjoBIAj2IDmO4oTYL/R7zluw==,iv:CbQjtCiPHccbEXtDK8tUNV88Skg5SYe4NPlPzJphBMU=,tag:uyMTmh9CD1wA08+FQVIxew==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: traefik
    name: dashboard-staging
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:7AstOjt4wY5O3fEOFHMftIZx0miGadC0MQ1C1Urc02E/0Kpxbfb8FbhW5x1BCW92AREj9NjMq96cZwFMk5huYSD9MBz6BewlPgjwDXdF0S93kabpFRrT23cjoW3Z,iv:Zojf7/23ntgUHS2CDy+Uv63Z3Yy5LOX9UyTW+LKzOYU=,tag:FmB2uZN26wVr+vu+79GO9Q==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: api@internal
              kind: TraefikService
    tls:
        domains:
            - main: ENC[AES256_GCM,data:AikA+t9eqHZhmSUM//ceLf5BLh/6MhvGOw==,iv:QWrzQtbtdbXAJL/BX5tatM1z8FHiV5acd0IiicIXXDo=,tag:ZFEldkHJhD34qy18Ht6zng==,type:str]
              sans:
                - ENC[AES256_GCM,data:WTG6YxcWK1xZ74CiMbbjkHbCPgDJPrFQFNA=,iv:Oaq7aTCebp7HkOM9X6W7ZrvxSF2bAwd3drycjrkCVk8=,tag:JI2HtHgnA3i0T7n6T9CRGw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: traefik-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmVXp3b21wUXRSbWNHRUU5
[...]
            OR9z4d12YQnMGLmHQ3g69OosdtV45hGRyERcuyRRAgTp3dpSmwTJJQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-26T18:23:54Z"
    mac: ENC[AES256_GCM,data:QK2rCSrdWmmxzIF7p0UBxR0eqO27fT1ShyDAUVe9/1HctQQ9rPQErRK0YVqOoE9U8KVxuSuF3sQtsNy7JeC/a4Y7nk+jGEC6WvTj1znTQ+qLHFfrfGKRjAHSPts4p74YDeFeUxoKXkqwgWyYjRhnvK9JbxN8HkilTn8dXqxrar8=,iv:HHcxEqbMXkn/cennMV02oBkWXs8yMPfcIvw9vj6vLUY=,tag:BFFz2JMZJsxGSriCAGaw1A==,type:str]
    pgp:
        - created_at: "2024-06-21T22:54:02Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//XdNRVwLNrjrNslFGv04hyMf1s1IFIQRyFu/7yicY5IO3
[...]
            =Qf0W
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
